# test-agent

./: .env.example  .gitignore  README.md  orchestra.MD  pyproject.toml  requirements.txt  workflow.py
agentic/: __init__.py  auto_fixer.py  cli.py  config.py  context_generator.py  enhanced_context_generator.py  git_automation.py  jira_connector.py  pr_review.py  todo_manager.py
agentic/templates/agents/: Conductor.agent.md  code-review-subagent.agent.md  implement-subagent.agent.md  planning-subagent.agent.md
config/: __init__.py  settings.py
src/: __init__.py  context_generator.py  git_automation.py  jira_connector.py
tests/: test_scrum_1.py
